--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-----------------------bootstrap navbar---------------------------->
+<!--bootstrap navbar________________________________________________________________________-->
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark header">
     <a class="navbar-brand" href="index.html">
@@ -20,42 +20,54 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<!--навигация________________________________________________________________________-->    	
         <ul class="navbar-nav mr-auto menu_1">
             <li class="nav-item">
                 <a href="#">
-                    <div>
-
-                    </div>
+                    <div></div>
                     <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
                 </a>
+                <div class="dropdown-divider"></div>
             </li>
-            <div class="dropdown-divider"></div>
-            <li class="nav-item"><a href="#"><div></div><div>СТАТЬИ</div></a></li>
-            <div class="dropdown-divider"></div>
-            <li class="nav-item"><a href="#"><div></div><div>ПРОЕКТЫ</div></a></li>
-            <div class="dropdown-divider"></div>
-            <li class="nav-item"><a href="#"><div></div><div>РАСЧЕТЫ <br> ONLINE</div></a></li>
-            <div class="dropdown-divider"></div>
-            <li class="nav-item"><a href="shop.html"><div></div><div>МАГАЗИН</div></a></li>
-        </ul>
-        <ul class="navbar-nav flex-column contacts">
-            <div class="dropdown-divider"></div>
-            <a href="tel:+78123333333"><li><div><img src="images/Phone.png" alt="Phone"></div><div> +7 (812) 333-33-33</div></li></a>
-            <div class="dropdown-divider"></div>
-            <a href="mailto:pochta@pochta.ru?subject=Вопрос по HTML"><li><div><img src="images/E_mail.png" alt="E-mail"></div><email> pochta@pochta.ru</email></li></a>
-            <div class="dropdown-divider"></div>
-            <a href="contacts.html"><li><div><img src="images/Location.png" alt="Location"></div><div class="contacts_text"> Санкт-Петербург, ул. Гороховая, д. 33, оф. 15. CХЕМА ПРОЕЗДА:</div></li></a>
-        </ul>
-    </div>
-</nav>
-</header>
-
-<div class="container-fluid">
-    <div class="main">
-
-<!----------------------------кнопка Провести ГАЗ-------------------------------------------->
+            <li class="nav-item">
+            	<a href="#">
+            		<div></div>
+            		<div>СТАТЬИ</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li class="nav-item">
+            	<a href="#">
+            		<div></div>
+            		<div>ПРОЕКТЫ</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li class="nav-item">
+            	<a href="#">
+            		<div></div>
+            		<div>РАСЧЕТЫ <br> ONLINE</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li class="nav-item">
+            	<a href="shop.html">
+            		<div></div>
+            		<div>МАГАЗИН</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li class="nav-item">
+            	<a href="contacts.html">
+            		<div></div>
+            		<div>КОНТАКТЫ</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li class="nav-item">
+            	<!--кнопка Провести ГАЗ________________________________________________________________________-->
     <div class="form">
-        <form action="">
+        <form action="#">
            <button type="button" class="btn btn-lg bg-danger" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ</button>
         </form>
 
@@ -88,7 +100,46 @@
             </div>
         </div>
     </div>
-<!----------------------------Виды объектов --------------------------------------------->
+            	<div class="dropdown-divider"></div>
+            </li>
+        </ul>
+<!--навигация контактов________________________________________________________________________-->
+        <ul class="navbar-nav flex-column contacts">
+        	<li>
+            	<a href="tel:+78123333333">
+<!--             		<div>
+            			<img src="images/Phone.png" alt="Phone">
+            		</div> -->
+            		<div> +7 (812) 333-33-33</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li>
+            	<a href="mailto:pochta@pochta.ru?subject=Вопрос_с_сайта">
+<!--             		<div>
+            			<img src="images/E_mail.png" alt="E-mail">
+            		</div> -->
+            		<div> pochta@pochta.ru</div>
+            	</a>
+            	<div class="dropdown-divider"></div>
+            </li>
+            <li>
+            	<a href="contacts.html">
+<!--             		<div>
+            			<img src="images/Location.png" alt="Location">
+            		</div> -->
+            		<div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
+            	</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+</header>
+
+<div class="container-fluid">
+    <div class="main">
+
+<!--Виды объектов________________________________________________________________________-->
         <div class="row menu_3">
             <a href="GasificationFlat.html" class="col-xl-3 col-lg-6 typeBuildingOut">
                 <div class="media">
@@ -127,7 +178,7 @@
                 </div>
             </a>
         </div>
-<!----------------------------Виды работ --------------------------------------------->
+<!--Виды работ________________________________________________________________________-->
         <div class="row">
             <a href="typeWorkTU.html" class="col-xl-4 col-lg-6 col-sm-12 typeWorkOut">
                 <div class="media typeWorkIn">
@@ -234,7 +285,7 @@
 </div>
 <footer>
     <div class="clearfix"></div>
-    <p>&copy;2017. Pavel Matuikhin. Все права защищены</p>
+    <p>&copy;2019. Pavel Matuikhin. Все права защищены</p>
 </footer>
 
 <!-- jQuery -->
