--- a/typeWorkTU.html
+++ b/typeWorkTU.html
@@ -67,13 +67,13 @@
         Газоснабжение
 
         Газопровод
-        Группа компаний «ЭНЕРГОГАЗ» оказывает услуги по выполнению расчета максимального часового расхода газа, получению ТУ (технических условий) на подключение и присоединение, а также, получению договора на технологическое присоединение в газораспределительной организации.
+        Группа компаний «---» оказывает услуги по выполнению расчета максимального часового расхода газа, получению ТУ (технических условий) на подключение и присоединение, а также, получению договора на технологическое присоединение в газораспределительной организации.
 
         После принятия решения о газификации объекта, будь то промышленный объект или частный дом, необходимо понять какой объем газа будет потреблять объект, для чего необходимо выполнить расчет максимального часового расхода газа, основывающийся на теплотехническом расчете.
 
         На основании данного расчета подается заявление в газораспределительную организацию на подключение объекта к системе газораспределения. Газораспределительная организация определяет газопровод-источник, соответствующий запрашиваемым параметрам и предоставляет предварительные технические условия, после чего заключается договор на технологическое присоединение.
 
-        Многолетний опыт работы в сфере газификации и газоснабжения позволяет компании «ЭНЕРГОГАЗ» предлагать максимально эффективные решения на каждом этапе получения техусловий на подключение газа.
+        Многолетний опыт работы в сфере газификации и газоснабжения позволяет компании «---» предлагать максимально эффективные решения на каждом этапе получения техусловий на подключение газа.
         ЗАКАЗАТЬ ТЕХНИЧЕСКИЕ УСЛОВИЯ НА ПОДКЛЮЧЕНИЕ ГАЗА
         Заказать получение техусловий на подключение газа в нашей компании могут юридические и частные лица, а также государственные организации. Объектом подключения при этом могут быть как частные владения, так и собственность компании.
         ДЛЯ ЧАСТНЫХ КЛИЕНТОВ ДЛЯ КОМПАНИЙ И ФИРМ ДЛЯ ГОСУДАРСТВЕННЫХ ОРГАНИЗАЦИЙ
@@ -119,7 +119,7 @@
         Копия паспорта заявителя (уставные документы, для юридических лиц).
         Доверенность на газификацию объекта.
         СТОИМОСТЬ УСЛУГ ПО ПОЛУЧЕНИЮ ТЕХУСЛОВИЙ НА ГАЗ
-        Цены на услуги по получению ТУ на газ в компании «ЭНЕРГОГАЗ»:
+        Цены на услуги по получению ТУ на газ в компании «---»:
 
         <!-- gorgaz.info -->
 
