--- a/calculation.html
+++ b/calculation.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<!-----------------------bootstrap navbar---------------------------->
+<!--bootstrap navbar________________________________________________________________________-->
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark header">
         <a class="navbar-brand" href="index.html">
@@ -127,10 +127,7 @@
 </header>
 <div class="main">
     <div class="container">
-        <h5 class="">Получение технических условий</h5>
-        <p class="">Проведем газ для промыщленных объектов</p>
-
-        <div class="clearfix"></div>
+        <h1>Расчеты</h1>
     </div>
 </div>
 <footer>
