--- a/Wolf_CGG_1K_28.html
+++ b/Wolf_CGG_1K_28.html
@@ -11,131 +11,118 @@
 <body>
 <!--bootstrap navbar________________________________________________________________________-->
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark header">
-    <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" alt="logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-lg navbar-dark header">
+        <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<!--навигация________________________________________________________________________-->        
-        <ul class="navbar-nav mr-auto menu_1">
-            <li class="nav-item">
-                <a href="#">
-                    <div></div>
-                    <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
-                </a>
-                <div class="dropdown-divider"></div>
-            </li>
-            <li class="nav-item">
-                <a href="#">
-                    <div></div>
-                    <div>СТАТЬИ</div>
-                </a>
-                <div class="dropdown-divider"></div>
-            </li>
-            <li class="nav-item">
-                <a href="#">
-                    <div></div>
-                    <div>ПРОЕКТЫ</div>
-                </a>
-                <div class="dropdown-divider"></div>
-            </li>
-            <li class="nav-item">
-                <a href="#">
-                    <div></div>
-                    <div>РАСЧЕТЫ <br> ONLINE</div>
-                </a>
-                <div class="dropdown-divider"></div>
-            </li>
-            <li class="nav-item">
-                <a href="shop.html">
-                    <div></div>
-                    <div>МАГАЗИН</div>
-                </a>
-                <div class="dropdown-divider"></div>
-            </li>
-            <li class="nav-item">
-                <a href="contacts.html">
-                    <div></div>
-                    <div>КОНТАКТЫ</div>
-                </a>
-                <div class="dropdown-divider"></div>
-            </li>
-            <li class="nav-item">
-                <!--кнопка Провести ГАЗ________________________________________________________________________-->
-    <div class="form">
-        <form action="#">
-           <button type="button" class="btn btn-lg bg-danger" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ</button>
-        </form>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!--навигация________________________________________________________________________-->
+            <ul class="navbar-nav mr-auto menu_1">
+                <li class="nav-item">
+                    <a href="cost.html">
+                        <div></div>
+                        <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="calculation.html">
+                        <div></div>
+                        <div>РАСЧЕТЫ <br> ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="shop.html">
+                        <div></div>
+                        <div>МАГАЗИН</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="contacts.html">
+                        <div></div>
+                        <div>КОНТАКТЫ</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
 
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Заполните форму обратной связи и мы вам с вами свяжемся.</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="recipient-name" class="col-form-label"> Ваш номер телефона </label>
-                                <input type="text" class="form-control" id="recipient-name" required="required" pattern="\+7[0-9]{3}-[0-9]{7}" placeholder="телефон">
-                            </div>
-                            <div class="form-group">
-                                <label for="message-text" class="col-form-label"> Ваше имя. Описание вида работы, адрес. </label>
-                                <textarea class="form-control" id="message-text"></textarea>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
-                        <button type="button" class="btn btn-primary">Послать сообщение</button>
+                </li>
+            </ul>
+        </div>
+        <!--кнопка Провести ГАЗ________________________________________________________________________-->
+        <div class="form gasForm">
+            <form action="#">
+                <button type="button" class="btnfos" text="btn btn-lg bg-danger" data-toggle="modal"
+                        data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ
+                </button>
+            </form>
+
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Заполните форму обратной связи и
+                                мы вам с вами свяжемся.</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="recipient-name" class="col-form-label"> Ваш номер
+                                        телефона </label>
+                                    <input type="text" class="form-control" id="recipient-name"
+                                           required="required" pattern="\+7[0-9]{3}-[0-9]{7}"
+                                           placeholder="телефон">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label"> Ваше имя. Описание
+                                        вида работы, адрес. </label>
+                                    <textarea class="form-control" id="message-text"></textarea>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть
+                            </button>
+                            <button type="button" class="btn btn-primary">Послать сообщение</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-                <div class="dropdown-divider"></div>
-            </li>
-        </ul>
-<!--навигация контактов________________________________________________________________________-->
+        <div class="dropdown-divider"></div>
+        <!--навигация контактов________________________________________________________________________-->
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-<!--                    <div>
-                        <img src="images/Phone.png" alt="Phone">
-                    </div> -->
                     <div> +7 (812) 333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
             <li>
                 <a href="mailto:pochta@pochta.ru?subject=Вопрос_с_сайта">
-<!--                    <div>
-                        <img src="images/E_mail.png" alt="E-mail">
-                    </div> -->
                     <div> pochta@pochta.ru</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
             <li>
                 <a href="contacts.html">
-<!--                    <div>
-                        <img src="images/Location.png" alt="Location">
-                    </div> -->
                     <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
                 </a>
             </li>
         </ul>
-    </div>
-</nav>
+    </nav>
 </header>
-
 <div class="container">
     <div class="main">
         <a href="images/wallBoilers/Wolf_CGG_1K.jpg" target="_blank">
