--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<!-----------------------bootstrap navbar---------------------------->
+<!--bootstrap navbar________________________________________________________________________-->
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark header">
         <a class="navbar-brand" href="index.html">
@@ -125,12 +125,39 @@
         </ul>
     </nav>
 </header>
-<div class="main">
-    <div class="container">
-        <h5 class="">Получение технических условий</h5>
-        <p class="">Проведем газ для промыщленных объектов</p>
-
-        <div class="clearfix"></div>
+<div class="container">
+    <div class="main">
+        <h1>Каталог</h1>
+        <a href="images/wallBoilers/Wolf_CGG_1K.jpg" target="_blank">
+            <img height="300" max-width="300" src="images/wallBoilers/Wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
+        </a>
+        <h2>котел настенный Wolf (Германия)</h2>
+        модель Wolf CGG 1K
+        <h3>Характеристики товара</h3>
+        <p>
+        <ul>
+            <li>Цена:59 000</li>
+            <li>Производство Германия</li>
+            <li>Гарантия, мес 24</li>
+            <li>Мощность, кВт 28</li>
+            <li>Камера сгорания закрытая</li>
+            <li>Количество контуров 2</li>
+            <li>Отопление да</li>
+            <li>Горячее водоснабжение да, проточный теплообменник</li>
+            <li>Производительность ГВС, л/мин 12</li>
+            <li>Теплоноситель вода, фирменный антифриз</li>
+            <li>Высота, мм 855</li>
+            <li>Ширина, мм 440</li>
+            <li>Глубина, мм 393</li>
+            <li>Вес, кг 42</li>
+            <li>Диаметр дымохода, мм 60/100</li>
+            <li>Подключение газа, Ду мм 20</li>
+            <li>Расход газа м3/ч 3,30</li>
+        </ul>
+        </p>
+        <a href="Wolf_CGG_1K_28.html">
+            <p>Подробное описание товара</p>
+        </a>
     </div>
 </div>
 <footer>
@@ -170,7 +197,44 @@
             <p>&copy;2019. Pavel Matiukhin. Все права защищены</p>
         </div>
     </div>
-</footer>
+    <footer>
+        <div class="clearfix"></div>
+        <div class="row">
+            <div class="col-xl-3 col-md-6">
+                <h4>Навигация</h4>
+                <ul>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Калькулятор стоимости</a></li>
+                    <li><a href="#">Расчеты</a></li>
+                    <li><a href="#">Магазин</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <h4>Виды газифицируемых объектов</h4>
+                <ul>
+                    <li><a href="#">Газификация частных домов и квартир</a></li>
+                    <li><a href="#">Газификация поселков и садоводств</a></li>
+                    <li><a href="#">Газификация коммерческих помещений и юр. лиц</a></li>
+                    <li><a href="#">Газификация котельных и промышленных предприятий</a></li>
+                </ul>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <h4>Виды выполняемых рабор</h4>
+                <ul>
+                    <li><a href="#">Получение технических условий</a></li>
+                    <li><a href="#">Проектирование</a></li>
+                    <li><a href="#">Монтажные работы</a></li>
+                    <li><a href="#">Обследование вентканалов и дымоходов</a></li>
+                    <li><a href="#">Подключение газовых приборов</a></li>
+                    <li><a href="#">Установка узлов учета</a></li>
+                </ul>
+            </div>
+            <div ul class="col-xl-3 col-md-6">
+                <p>&copy;2019. Pavel Matiukhin. Все права защищены</p>
+            </div>
+        </div>
+    </footer>
 <!-- jQuery -->
 <script src="scripts/jquery-3.3.1.min.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
