--- a/typeWorkProject.html
+++ b/typeWorkProject.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ПрофГаз</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap.min.css">
-
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <!-----------------------bootstrap navbar---------------------------->
@@ -247,7 +245,7 @@
                 <li><a href="#">Установка узлов учета</a></li>
             </ul>
         </div>
-        <div ul class="col-xl-3 col-md-6">
+        <div class="col-xl-3 col-md-6">
             <p>&copy;2019. Pavel Matiukhin. Все права защищены</p>
         </div>
     </div>
