--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!--навигация________________________________________________________________________-->
-            <ul class="navbar-nav mr-auto menu_1">
+            <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
-                        <div></div>
-                        <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
+                        <div class="menuCalc"></div>
+                        <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
                 <li class="nav-item">
                     <a href="calculation.html">
                         <div></div>
-                        <div>РАСЧЕТЫ <br> ONLINE</div>
+                        <div>РАСЧЕТЫ ONLINE</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -59,7 +59,7 @@
         <!--кнопка Провести ГАЗ________________________________________________________________________-->
         <div class="form gasForm">
             <form action="#">
-                <button type="button" class="btnfos" text="btn btn-lg bg-danger" data-toggle="modal"
+                <button type="button" class="btnfos" data-toggle="modal"
                         data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ
                 </button>
             </form>
@@ -115,20 +115,19 @@
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
-            <li>
-                <a href="contacts.html">
-                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
-                </a>
-            </li>
+<!--            <li>-->
+<!--                <a href="contacts.html">-->
+<!--                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>-->
+<!--                </a>-->
+<!--            </li>-->
         </ul>
     </nav>
 </header>
-
 <div class="main">
     <div class="container-fluid">
         <!--Виды объектов________________________________________________________________________-->
         <div class="row menu_3">
-            <a href="GasificationFlat.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationFlat.html" class="col-xl-3 col-lg-6 typeBuildingOut">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/flat.png" alt="flat">
                     <div class="media-body">
@@ -136,7 +135,7 @@
                     </div>
                 </div>
             </a>
-            <a href="GasificationHome.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationHome.html" class="col-xl-3 col-lg-6 typeBuildingOut">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/house.png" alt="house">
                     <div class="media-body">
@@ -144,7 +143,7 @@
                     </div>
                 </div>
             </a>
-            <a href="GasificationCommerce.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationCommerce.html" class="col-xl-3 col-lg-6 typeBuildingOut">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/commerce.png" alt="commerce">
                     <div class="media-body">
@@ -152,7 +151,7 @@
                     </div>
                 </div>
             </a>
-            <a href="GasificationIndustry.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationIndustry.html" class="col-xl-3 col-lg-6 typeBuildingOut">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/boilerHouse.png" alt="boilerHouse">
                     <div class="media-body">
