--- a/shop.html
+++ b/shop.html
@@ -22,18 +22,18 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!--навигация________________________________________________________________________-->
-            <ul class="navbar-nav mr-auto menu_1">
+            <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
-                        <div></div>
-                        <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
+                        <div class="menuCalc"></div>
+                        <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
                 <li class="nav-item">
                     <a href="calculation.html">
                         <div></div>
-                        <div>РАСЧЕТЫ <br> ONLINE</div>
+                        <div>РАСЧЕТЫ ONLINE</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -59,7 +59,7 @@
         <!--кнопка Провести ГАЗ________________________________________________________________________-->
         <div class="form gasForm">
             <form action="#">
-                <button type="button" class="btnfos" text="btn btn-lg bg-danger" data-toggle="modal"
+                <button type="button" class="btnfos" data-toggle="modal"
                         data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ
                 </button>
             </form>
@@ -115,44 +115,115 @@
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
-            <li>
-                <a href="contacts.html">
-                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
-                </a>
-            </li>
+            <!--            <li>-->
+            <!--                <a href="contacts.html">-->
+            <!--                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>-->
+            <!--                </a>-->
+            <!--            </li>-->
         </ul>
     </nav>
 </header>
 <div class="container">
     <div class="main">
         <h1>Каталог</h1>
-        <a href="images/wallBoilers/Wolf_CGG_1K.jpg" target="_blank">
-            <img height="300" max-width="300" src="images/wallBoilers/Wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
+        <a href="images/wallBoilers/wolf_CGG_1K.jpg" target="_blank">
+            <img class="product" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
         </a>
         <h2>котел настенный Wolf (Германия)</h2>
         модель Wolf CGG 1K
-        <h3>Характеристики товара</h3>
-        <p>
-        <ul>
-            <li>Цена:59 000</li>
-            <li>Производство Германия</li>
-            <li>Гарантия, мес 24</li>
-            <li>Мощность, кВт 28</li>
-            <li>Камера сгорания закрытая</li>
-            <li>Количество контуров 2</li>
-            <li>Отопление да</li>
-            <li>Горячее водоснабжение да, проточный теплообменник</li>
-            <li>Производительность ГВС, л/мин 12</li>
-            <li>Теплоноситель вода, фирменный антифриз</li>
-            <li>Высота, мм 855</li>
-            <li>Ширина, мм 440</li>
-            <li>Глубина, мм 393</li>
-            <li>Вес, кг 42</li>
-            <li>Диаметр дымохода, мм 60/100</li>
-            <li>Подключение газа, Ду мм 20</li>
-            <li>Расход газа м3/ч 3,30</li>
-        </ul>
-        </p>
+        <h3>Характеристики товара:</h3>
+        <table style="width:100%">
+            <tr>
+                <td>Цена:</td>
+                <td>59 000</td>
+                <td>рублей</td>
+            </tr>
+            <tr>
+                <td>Производство</td>
+                <td>Германия</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Гарантия</td>
+                <td>24</td>
+                <td>месяца</td>
+            </tr>
+            <tr>
+                <td>Мощность</td>
+                <td>28</td>
+                <td>кВт</td>
+            </tr>
+            <tr>
+                <td>Камера сгорания</td>
+                <td>закрытая</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Количество контуров</td>
+                <td>2</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Отопление</td>
+                <td>да</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Горячее водоснабжение</td>
+                <td>да</td>
+                <td>проточный теплообменник</td>
+            </tr>
+            <tr>
+                <td>Мощность</td>
+                <td>28</td>
+                <td>кВт</td>
+            </tr>
+            <tr>
+                <td>Производительность ГВС</td>
+                <td>12</td>
+                <td>л/мин</td>
+            </tr>
+            <tr>
+                <td>Теплоноситель</td>
+                <td>вода, фирменный антифриз</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Высота</td>
+                <td>855</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Ширина</td>
+                <td>440</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Глубина</td>
+                <td>393</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Вес</td>
+                <td>42</td>
+                <td>кг</td>
+            </tr>
+            <tr>
+                <td>Диаметр дымохода</td>
+                <td>60/100</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Подключение газа, Ду</td>
+                <td>20</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Расход газа</td>
+                <td>3,30</td>
+                <td>м3/ч</td>
+            </tr>
+        </table>
         <a href="Wolf_CGG_1K_28.html">
             <p>Подробное описание товара</p>
         </a>
@@ -191,48 +262,11 @@
                 <li><a href="#">Установка узлов учета</a></li>
             </ul>
         </div>
-        <div ul class="col-xl-3 col-md-6">
+        <div class="col-xl-3 col-md-6">
             <p>&copy;2019. Pavel Matiukhin. Все права защищены</p>
         </div>
     </div>
-    <footer>
-        <div class="clearfix"></div>
-        <div class="row">
-            <div class="col-xl-3 col-md-6">
-                <h4>Навигация</h4>
-                <ul>
-                    <li><a href="#">О нас</a></li>
-                    <li><a href="#">Калькулятор стоимости</a></li>
-                    <li><a href="#">Расчеты</a></li>
-                    <li><a href="#">Магазин</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="col-xl-3 col-md-6">
-                <h4>Виды газифицируемых объектов</h4>
-                <ul>
-                    <li><a href="#">Газификация частных домов и квартир</a></li>
-                    <li><a href="#">Газификация поселков и садоводств</a></li>
-                    <li><a href="#">Газификация коммерческих помещений и юр. лиц</a></li>
-                    <li><a href="#">Газификация котельных и промышленных предприятий</a></li>
-                </ul>
-            </div>
-            <div class="col-xl-3 col-md-6">
-                <h4>Виды выполняемых рабор</h4>
-                <ul>
-                    <li><a href="#">Получение технических условий</a></li>
-                    <li><a href="#">Проектирование</a></li>
-                    <li><a href="#">Монтажные работы</a></li>
-                    <li><a href="#">Обследование вентканалов и дымоходов</a></li>
-                    <li><a href="#">Подключение газовых приборов</a></li>
-                    <li><a href="#">Установка узлов учета</a></li>
-                </ul>
-            </div>
-            <div class="col-xl-3 col-md-6">
-                <p>&copy;2019. Pavel Matiukhin. Все права защищены</p>
-            </div>
-        </div>
-    </footer>
+</footer>
 <!-- jQuery -->
 <script src="scripts/jquery-3.3.1.min.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
