--- a/typeWorkControl.html
+++ b/typeWorkControl.html
@@ -22,7 +22,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!--навигация________________________________________________________________________-->
-            <ul class="navbar-nav mr-auto menu_1">
+            <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
                         <div></div>
